DeathToll & Mangaichi icons are no longer invisible. | fixes #171 [ci skip]

--- a/public/assets/css/main.light.css
+++ b/public/assets/css/main.light.css
@@ -377,7 +377,7 @@ body {
 
 	vertical-align: text-bottom;
 
-	background: url("../../img/sites.16.png") no-repeat;
+	background: url("../../img/sites.17.png") no-repeat;
 }
 .sprite-site.sprite-bato-to {
 	width: 16px;
