--- a/public/assets/less/modules/icons.less
+++ b/public/assets/less/modules/icons.less
@@ -24,7 +24,7 @@
 
 .sprite-site {
 	.sprite();
-	@cache-version: 16;
+	@cache-version: 17;
 	background: url('../../img/sites.@{cache-version}.png') no-repeat;
 
 	&.sprite-bato-to {
